--- a/static/css/button.css
+++ b/static/css/button.css
@@ -38,3 +38,31 @@ border-right: 1px solid  rgba(0,0,0,0.15);
 .button.dropbox{
   background: #0088cc;
 }
+
+a.gumroad-button {
+    background-color: white !important;
+    background-image: url(https://gumroad.com/button/button_bar.jpg) !important;
+    background-repeat: repeat-x !important;
+    border-radius: 4px !important;
+    box-shadow: rgba(0, 0, 0, 0.4) 0 0 2px !important;
+    color: #999 !important;
+    display: inline-block !important;
+    font-family: -apple-system, ".SFNSDisplay-Regular", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+    font-size: 16px !important;
+    font-style: normal !important;
+    font-weight: 500 !important;
+    line-height: 50px !important;
+    padding: 0 15px !important;
+    text-shadow: none !important;
+    text-decoration: none !important;
+}
+
+.gumroad-button-logo {
+    background-image: url(https://gumroad.com/button/button_logo.png) !important;
+    background-size: cover !important;
+    height: 17px !important;
+    width: 16px !important;
+    display: inline-block !important;
+    margin-bottom: -3px !important;
+    margin-right: 15px !important;
+}
