--- a/layouts/_default/topic.html
+++ b/layouts/_default/topic.html
@@ -13,14 +13,14 @@
 
     <main class="col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content my-2 my-md-0 docs" role="main">
       <div class="d-md-flex flex-md-row-reverse align-items-center justify-content-between">
-        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-          <label class="btn btn-secondary active">
+        <div id="platforms" class="btn-group btn-group-toggle" data-toggle="buttons">
+          <label id="windows" class="btn btn-secondary">
             <input type="radio" name="options" id="option1" checked> <i class="fab fa-windows"></i>
           </label>
-          <label class="btn btn-secondary">
+          <label id="macos" class="btn btn-secondary">
             <input type="radio" name="options" id="option2"> <i class="fab fa-apple"></i>
           </label>
-          <label class="btn btn-secondary">
+          <label id="linux" class="btn btn-secondary">
             <input type="radio" name="options" id="option3"> <i class="fab fa-linux"></i>
           </label>
         </div>
