--- a/layouts/shortcodes/alert.html
+++ b/layouts/shortcodes/alert.html
@@ -1,3 +1,5 @@
-<div class="alert alert-{{ index .Params 0 }}" role="alert">
-  <p>{{ .Inner | markdownify }}</p>
+<div class="alert-box {{ index .Params 0 }}">
+  <blockquote>
+    {{ .Inner | markdownify }}
+  </blockquote>
 </div>
